opacity for main window

--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -1,5 +1,5 @@
 $ic: #b37399;
-$color-body: #ff0000;
+$color-body: rgba(7, 70, 165, 0.5);
 $first-animation-duration: 1s;
 $animation-overlap: 0.5s;
 $letter-width: 55px; // 55 15
