onchange event for input

--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -91,6 +91,10 @@ input {
         -webkit-app-region: no-drag;
 }
 
+.input-launcher {
+    width: 100%;
+}
+
 
 %vertical-line {
     position: absolute;
