--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -91,8 +91,17 @@ input {
         -webkit-app-region: no-drag;
 }
 
-.input-launcher {
+.launcher-input {
     width: 100%;
+}
+
+.launcher {
+    .result-list {
+        list-style-type: none;
+        padding: 0em;
+    }
+
+
 }
 
 
