--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -39,12 +39,18 @@ body {
 
     .search-input {
         width: 100%;
+        height: 34px;
+        font-size: 14pt;
     }
 
     .result-list {
         list-style-type: none;
         padding: 4px;
         background-color: rgba(255, 182, 47, 0.288);
+
+        .active {
+            background-color: #ff0000;
+        }
     }
 
 
