--- a/local-config/jarvil/themes/default.css
+++ b/local-config/jarvil/themes/default.css
@@ -9,7 +9,7 @@
     background: transparent;
     outline: none;
     border: none;
-    padding: 18px;
+    padding: 30px 18px;
     color: white;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -24,4 +24,8 @@
     color: white;
     font-size: 30px;
     padding: 15px;
+}
+
+.launcher ul.result-list li.active {
+    background-color: #ff0000;
 }
