--- a/local-config/jarvil/themes/nature.css
+++ b/local-config/jarvil/themes/nature.css
@@ -26,7 +26,7 @@
 .launcher ul.result-list li {
     color: #1d344e;
     font-size: 30px;
-    padding: 15px;
+    /* padding: 15px; */
     cursor: pointer;
 }
 
