--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -50,10 +50,34 @@ body {
         padding: 4px;
         background-color: rgba(255, 182, 47, 0.288);
 
-        .active {
-            background-color: #ffffff5d;
+        .result-item {
+            display: flex;
+            max-height: 64px;
+            padding: 10px;
 
+            img {
+                flex-grow: 0;
+                max-width: 44px;
+            }
+
+            .content{
+                flex-grow: 1;
+                margin-left: 10px;
+
+                .title {
+                    font-size: 24px;
+                }
+
+                .description {
+                    font-size: 14px;
+                }
+            }
+
+            // &.active {
+            //     background-color: #ffffff5d;
+            // }
         }
+
     }
 
 
