--- a/src/launcher/app/index.scss
+++ b/src/launcher/app/index.scss
@@ -30,6 +30,8 @@ body {
     justify-content: center;
     align-items: center;
     display: flex;
+    padding: 0 5px 5px 5px;
+
     .search-input,.result-list  {
         order: 0;
         flex-grow: 1;
@@ -37,6 +39,7 @@ body {
         flex-basis: auto;
         align-self: stretch;
         margin: 0;
+        padding: 0;
     }
 
     .search-input {
@@ -47,7 +50,7 @@ body {
 
     .result-list {
         list-style-type: none;
-        padding: 4px;
+        // padding: 4px;
         background-color: rgba(255, 182, 47, 0.288);
 
         .result-item {
